1.0-devel
=====================

 * Updated exif lib
   [russf]

 * Added default values for the index/metadata friendly names, descriptions,
   and criteria restrictions for Smart Folders using ZConfig.  Added the
   ability to have an index with no criteria (useful for sort only criteria).
   Made the descriptions for the criteria types more sensible (I hope this
   doesn't screw up existing translations, but the current names are terrible).
   Also, added some missing criteria related strings to manual.pot.
   [alecm]

 * Added a getCriteriaUniqueWidgetAttr method to topics to compile things like
   'helper_js' in one place for the edit form.
   [alecm]

 * Fixed #1196809 - Use getMutator(self) instead of mutator(self) in base.py.
   [stefan]

 * Added new path criterion for use with ExtendedPathIndex that allows users
   to select paths to search in using a sitemap.  This now uses the
   lovely ATReferenceBrowserWidget.
   [alecm]

 * Add Topic to the list of allowed sub-objects for Topic during Migration.
   It was missing before because the class allowed_content_types property
   was being overwritten by the one from CMFTopics.
   [alecm]

 * BrowserDefaultMixin.getAvailableLayouts() now returns a list of tuples
   instead of a DisplayList. Required by interface change in Plone.
   [optilude]

 * Added cool icons for vCal/iCal export and image rotation/flipping made by
   the legendary Vidar Anderson.
   [blacktar, tiran]

 * Replaced AttributeStorage with AnnotationStorage for Document:text,
   File:file, Image:image, Event:text and NewsItem:text,image. This requires
   Archetypes 1.3.5
   [tiran]

 * Added new Current Author criterion which, when used with the Creator index,
   gets all objects authored by the currently logged in user.  Also fixed some
   permissions that were preventing normal users from viewing published topics.
   Fixes issue #1176355 (https://sourceforge.net/tracker/?func=detail&aid=1176355&group_id=55262&atid=645337).
   [alecm]
